# get_the_streamer_game

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  env_example  retrospective.md  setupEnv.sh
.github/workflows/: rust.yml
assets/: chat_wins_messages.txt  contributors.txt  streamer_wins_messages.txt
src/: chat_test_mock.rs  chatter.rs  command.rs  credits.rs  draw_system.rs  game_assets.rs  game_object.rs  game_object_type.rs  game_world.rs  gamestate.rs  interface.rs  lib.rs  main.rs  physics_system.rs  player_input.rs  running_state.rs  splash.rs  sprites.rs  utilities.rs
src/draw_system/: game_object_draw_system.rs  mod.rs  player_draw_system.rs  timer_draw_system.rs
src/life_system/: fire_life_system.rs  heart_life_system.rs  mod.rs  player_life_system.rs  snake_life_system.rs  sword_life_system.rs
src/physics/: credits_physics_system.rs  fire_physics.rs  heart_physics.rs  item_physics.rs  mod.rs  player_physics.rs  snake_physics.rs  sword_physics.rs  timer_physics.rs
src/ui/: dropzonearea.rs  gamewindow.rs  interface.rs  mod.rs  sidebar.rs  splash.rs  uitimer.rs
tests/: chat_test_mock.rs  offline_test.rs
