[package]
name = "get_the_streamer_game"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
twitch_chat_wrapper = "0.1.1"
eyre = "0.6.0"
rand = "0.7.3"

[build-dependencies]
anyhow = "1.0.32"
fs_extra = "1.2.0"
